# rag-pdf

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
rag/: chunking.py  engine.py  llm.py  memory.py  vectorstore.py
static/: index.html
