[project]
name = "rag-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.51.0",
]
